BOUNCER-TASK: request results on app init + every 10 sec + basic styling

--- a/email-app/src/app/verify/verify.component.html
+++ b/email-app/src/app/verify/verify.component.html
@@ -4,4 +4,5 @@
   </mat-form-field>
 
   <button mat-raised-button (click)="verify(emailField.value)">Verify</button>
+  <div *ngIf="apiIsAccessible == false" class="warn">Ooops, looks like you have no Internet. Don't forget to try later again.</div>
 </form>
