--- a/email-app/src/app/app.component.html
+++ b/email-app/src/app/app.component.html
@@ -3,10 +3,15 @@
 </mat-card>
 
 <mat-card>
-  <mat-list>
-    <mat-list-item *ngFor="let v of history">
-      <span>{{v.email}}</span>:&nbsp;<span>{{v.status}}</span>
-    </mat-list-item>
-  </mat-list>
+  <div class="container">
+    <mat-list>
+      <!-- TODO:  | async -->
+      <mat-list-item *ngFor="let v of history">
+        <span [ngClass]="{'invalid': v.status!='OK'}"><span>{{v.email}}</span>:&nbsp;<span>{{v.status}}</span></span>
+      </mat-list-item>
+    </mat-list>
+  </div>
 </mat-card>
+
+<app-footer></app-footer>
 
