BOUNCER-TASK: updated css

--- a/email-app/src/app/app.component.css
+++ b/email-app/src/app/app.component.css
@@ -7,6 +7,10 @@
   color: lightgrey;
 }
 
+.breakable {
+  word-break: break-all;
+}
+
 @media screen and (min-device-width: 1200px){
 
   .mat-card {
