--- a/email-app/src/styles.scss
+++ b/email-app/src/styles.scss
@@ -3,14 +3,20 @@
 
 @import "scss/bouncer-theme";
 
+html, body {
+  min-height: 100%;
+}
+
 body {
   min-height: 100vh;
   margin: 0;
   background-color: $bouncer-color;
   text-align: center;
+  font-family: 'Roboto', Helvetica, Arial, Lucida, sans-serif;
 }
 
 h1 {
-  font-family: Roboto, serif;
   font-size: 3em;
+  font-style: oblique;
+  color: #ffffff;
 }
