--- a/email-app/src/app/footer/footer.component.css
+++ b/email-app/src/app/footer/footer.component.css
@@ -1,5 +1,7 @@
 footer {
-  background-color: black;
-  color: white;
+  background-color: #ffffff;
+  color: #5a5a5a;
   font-weight: bold;
+  font-size: 1.2em;
+  padding: 3% 0;
 }
