--- a/email-app/src/app/app.component.html
+++ b/email-app/src/app/app.component.html
@@ -4,6 +4,14 @@
 
 <mat-card>
   <div class="container">
+    <div>
+      <p class="three-times-bigger with-italic">
+        The most intelligent email verification
+      </p>
+      <p class="two-times-bigger">
+        Do you want to validate your emails' list? <span id="call-to-action">Give it a try</span>. Try as many emails as you want!
+      </p>
+    </div>
     <mat-list>
       <!-- TODO:  | async -->
       <mat-list-item *ngFor="let v of history">
